Updated package.json file

--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "s72_moodscape",
   "version": "1.0.0",
   "description": "**Project Title: MoodScape**",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "main": "index.js",  
+  "author": "Aayush Raut",
   "license": "ISC"
 }
